# my-browser-use

./: .env  .gitignore  README.md  pyproject.toml  xft-autouse-plugin-demo-config.json
components/: agent.py
src/: __init__.py  main.py
src/components/: agent.py  reporter.py  test_runner.py
src/components/config/: pageUrls.py
