[tool.poetry]
name = "my-browser-use"
version = "0.1.0"
description = "A browser automation project using selenium library"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
browser-use = "^0.12.5"
selenium = "^4.0.0"
python-dotenv = "^1.0.0"
openai = "^1.0.0"
webdriver-manager = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^26.3.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:main"